    the #redirect might get changed or removed later (so it should not be
    cached and we also can't really say it is permanent)
  * fix crash when macro names contain non-ascii chars
  * CopyPage action: fix NameError exception when TextCha was answered wrong
  * docbook formatter: fix image URL generation, avoid script name duplication

  Other changes:
  * rss_rc action (RSS feed) is now much faster / much less resource consuming
    when requested for a specific single page. As we have a link to this in
    every page's html output, this likely also lightens the load caused by bots
    and search engine crawlers.
  * tuned editlog.news() - only open/read log if there is new stuff in it after
    last read position
  * improve python2.5 compatibility (with_statement)
  * add bingbot to ua_spiders
  * upgraded bundled werkzeug to 0.8.3
  * upgraded bundled passlib to 1.6.2
  * upgraded bundled pygments to 1.6


Version 1.9.7:
  New features:
  * passlib support - enhanced password hash security. Special thanks go to
    the Python Software Foundation (PSF) for sponsoring development of this!

    Docs for passlib: http://packages.python.org/passlib/

    If cfg.passlib_support is True (default), we try to import passlib and set
    it up using the configuration given in cfg.passlib_crypt_context (default
    is to use sha512_crypt with default configuration from passlib).

    The passlib docs recommend 3 hashing schemes that have good security, but
    some of them have additional requirements:
    sha512_crypt needs passlib >= 1.3.0, no other requirements.
    pbkdf2_sha512 needs passlib >= 1.4.0, no other requirements.
    bcrypt has additional binary/compiled package requirements, please refer to
    the passlib docs.

    cfg.password_scheme should be '{PASSLIB}' (default) to tell that passlib is
    wanted for new password hash creation and also for upgrading existing
    password hashes.
